end of video 103 code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
-	"liveServer.settings.port": 5504,
-	"cSpell.words": ["Bruschetta", "Caprese", "Classico", "Italiano", "Tavanti"]
+  "liveServer.settings.port": 5504,
+  "cSpell.words": [
+    "Bruschetta",
+    "Caprese",
+    "Classico",
+    "Italiano",
+    "mainindex",
+    "starterindex",
+    "Tavanti"
+  ]
 }
