done with code 105

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
     "Bruschetta",
     "Caprese",
     "Classico",
+    "Gnocci",
+    "Guiseppe",
     "Italiano",
     "mainindex",
+    "Ristorante",
     "starterindex",
     "Tavanti"
   ]
