ARRAYS AND LOOPS CODING

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,17 @@
     "Bruschetta",
     "Caprese",
     "Classico",
+    "Coutinho",
     "Gnocci",
     "Guiseppe",
     "Italiano",
+    "Kimmich",
+    "Lewandowski",
     "mainindex",
+    "Periscic",
     "Ristorante",
     "starterindex",
-    "Tavanti"
+    "Tavanti",
+    "Thiago"
   ]
 }
