--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,34 @@
 {
   "liveServer.settings.port": 5504,
   "cSpell.words": [
+    "Akanji",
+    "Alaba",
+    "Borrussia",
     "Bruschetta",
+    "Burki",
     "Caprese",
     "Classico",
+    "Coman",
     "Coutinho",
+    "Gnarby",
     "Gnocci",
+    "Goretzka",
+    "Gotze",
     "Guiseppe",
+    "Hakimi",
+    "Hummels",
     "Italiano",
     "Kimmich",
     "Lewandowski",
     "mainindex",
+    "Neuer",
+    "Pavard",
     "Periscic",
     "Ristorante",
     "starterindex",
     "Tavanti",
-    "Thiago"
+    "Thiago",
+    "Weigl",
+    "Witsel"
   ]
 }
